--- a/css/UI-Bootstrap-v-1.0.css
+++ b/css/UI-Bootstrap-v-1.0.css
@@ -764,7 +764,9 @@ pre code {
 
 @media (min-width: 768px) {
     .container {
+        /*max-width: 750px;*/
         max-width: 760px;
+
     }
 
     .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11 {
@@ -1156,6 +1158,7 @@ pre code {
 
 @media (min-width: 1200px) {
     .container {
+        /*max-width: 1170px;*/
         max-width: 1090px;
     }
 
